# res-regex

./: .gitignore  Cargo.toml  README.md  license.txt  regexes.rs  regexp.js
.github/workflows/: rust.yml
examples/: lots_of_regexes.rs
src/: lib.rs  unicode.rs
src/unicode_tables/: binary_props.rs  general_category.rs  mod.rs  script_values.rs
tests/: moz_central.rs
