[package]
name = "res-regex"
version = "0.1.0-beta.2"
authors = ["rfm <r@robertmasen.pizza>"]
edition = "2018"
description = "A js-regex validator"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ress = "0"
log = "0"
unic-ucd-ident = { version = "0.9.0", default_features = false, features = ["id"] }

[dev-dependencies]
pretty_env_logger = "0"