[package]
name = "res-regex"
version = "0.1.0"
edition = "2018"
description = "A js-regex validator"
authors = ["Robert Masen <r@robertmasen.pizza>"]
description = "A sanner/tokenizer for JS files"
keywords = ["JavaScript", "parsing", "JS", "ES", "ECMA"]
categories = ["parsing", "text-processing", "web-programming"]
license = "MIT"
repository = "https://github.com/rusty-ecma/res-regex"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0"
unic-ucd-ident = { version = "0.9.0", default_features = false, features = ["id"] }

[dev-dependencies]
pretty_env_logger = "0"